--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "googleapis": "^137.1.0"
+    "googleapis": "^137.1.0",
+    "hbs": "^4.2.0"
   }
 }
