--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "registra-ai-boy",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "npx nodemon index.js",
@@ -16,5 +15,7 @@
     "express-session": "^1.18.0",
     "googleapis": "^137.1.0",
     "hbs": "^4.2.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
